deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: madhyamas
  labels:
    app.kubernetes.io/name: madhyamas
    app.kubernetes.io/part-of: madhyamas
